@@ -164,26 +164,29 @@ Value DOMCSSStyleDeclaration::tryGet(ExecState *exec, const Identifier &property
 }
 
 
-void DOMCSSStyleDeclaration::tryPut(ExecState *exec, const Identifier &propertyName, const Value& value, int )
+void DOMCSSStyleDeclaration::tryPut(ExecState *exec, const Identifier &propertyName, const Value& value, int attr )
 {
 #ifdef KJS_VERBOSE
   kdDebug(6070) << "DOMCSSStyleDeclaration::tryPut " << propertyName.qstring() << endl;
 #endif
   if (propertyName == "cssText") {
     styleDecl.setCssText(value.toString(exec).string());
-  }
-  else {
+  } else {
     bool pixelOrPos;
     QString prop = cssPropertyName(propertyName, &pixelOrPos);
-    QString propvalue = value.toString(exec).qstring();
-    if (pixelOrPos)
-      propvalue += "px";
+    if (prop.isAllASCII() && DOM::getPropertyID(prop.ascii(), prop.length())) {
+      QString propvalue = value.toString(exec).qstring();
+      if (pixelOrPos)
+	propvalue += "px";
 #ifdef KJS_VERBOSE
-    kdDebug(6070) << "DOMCSSStyleDeclaration: prop=" << prop << " propvalue=" << propvalue << endl;
+      kdDebug(6070) << "DOMCSSStyleDeclaration: prop=" << prop << " propvalue=" << propvalue << endl;
 #endif
-    styleDecl.removeProperty(prop);
-    if(!propvalue.isEmpty())
-      styleDecl.setProperty(prop,DOM::DOMString(propvalue),""); // ### is "" ok for priority?
+      styleDecl.removeProperty(prop);
+      if(!propvalue.isEmpty())
+	styleDecl.setProperty(prop,DOM::DOMString(propvalue),""); // ### is "" ok for priority?
+    } else {
+      DOMObject::tryPut(exec, propertyName, value, attr);
+    }
   }
 }
 
